[package]
name = "deterministic"
version = "0.1.2"
authors = ["Tyler Neely <t@jujit.su>"]
description = "deterministic building blocks for testable systems"
license = "MIT/Apache-2.0"
repository = "https://github.com/spacejam/deterministic"
keywords = ["testing", "realtime-scheduler"]
documentation = "https://docs.rs/deterministic/"
edition = "2018"

[dependencies]
rand = "0.6"
libc = "0.2"
serde = "1.0"
